[project]
name = "message-formatter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Amdubaloch", email = "amdubaloch2005@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
message-formatter = "message_formatter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
